[gd_scene load_steps=5 format=3 uid="uid://cafaxt36dri1m"]

[ext_resource type="Script" path="res://Scripts/Controller/PantallaPrincipal.gd" id="1_djefx"]
[ext_resource type="Texture2D" uid="uid://gmf0a3p1dfok" path="res://Resources/maze-videogame-in-2d-without-anybody.jpg" id="2_xkog2"]

[sub_resource type="Theme" id="Theme_tw5xw"]

[sub_resource type="LabelSettings" id="LabelSettings_o4kw6"]
font_size = 68
font_color = Color(0.364706, 0.427451, 0, 1)
outline_size = 3

[node name="MenuInicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_tw5xw")
script = ExtResource("1_djefx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xkog2")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 152.0
offset_right = 639.0
offset_bottom = 323.0

[node name="CrearPartida" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Crear Partida"

[node name="ContinuarPartida" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar Partida"

[node name="Apariencia" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Seleccionar Apariencia"

[node name="Ajustes" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Configuraci√≥n"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salir"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 32.0
offset_right = 676.0
offset_bottom = 125.0
text = "MAZE 2D"
label_settings = SubResource("LabelSettings_o4kw6")

[connection signal="pressed" from="VBoxContainer/CrearPartida" to="." method="_on_crear_partida_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinuarPartida" to="." method="_on_continuar_partida_pressed"]
[connection signal="pressed" from="VBoxContainer/Apariencia" to="." method="_on_seleccionar_apariencia_pressed"]
[connection signal="pressed" from="VBoxContainer/Ajustes" to="." method="_on_ajustes_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
